--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="icon" href="favicon-32x32.png">
-    <title>Canva</title>
+    <title>Home - Canva</title>
     <style>
         * {
             margin: 0;
